<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mkenlo.inventory.DetailArticle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="@color/colorPrimaryLight" />

        <TextView
            android:id="@+id/article_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_spacing"
            android:text="@string/article_name"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/article_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_spacing"
            android:text="@string/article_category"
            android:textColor="@color/colorSecondaryText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_spacing">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_price_tag" />

            <TextView
                android:id="@+id/article_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/medium_spacing"
                android:text="@string/article_price"
                android:textColor="@color/colorSecondaryText" />
        </LinearLayout>


        <TextView
            android:id="@+id/article_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_spacing"
            android:layout_marginLeft="@dimen/medium_spacing"
            android:layout_marginRight="@dimen/medium_spacing"
            android:text="@string/article_description" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/article_availability"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/article_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/medium_spacing"
                android:layout_marginRight="@dimen/medium_spacing"
                android:text="@string/article_quantity"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/order_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_spacing"
                android:layout_marginRight="@dimen/small_spacing"
                android:background="@color/colorAccent"
                android:contentDescription="@string/order_article"
                android:padding="@dimen/medium_spacing"
                android:src="@drawable/ic_add_to_shopping_bag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/order_article"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="italic" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>
