<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thumbnail_height"
            android:scaleType="center"
            android:layout_marginTop="@dimen/small_spacing"/>

        <TextView
            android:id="@+id/article_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:layout_marginLeft="@dimen/medium_spacing"
            android:layout_marginRight="@dimen/medium_spacing"
            android:text="@string/article_name"
            android:textAllCaps="false"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_spacing">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_price_tag"/>

            <TextView
                android:id="@+id/article_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/medium_spacing"
                android:text="@string/article_price"
                android:textColor="@color/colorSecondaryText" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:layout_marginLeft="@dimen/medium_spacing"
            android:layout_marginRight="@dimen/medium_spacing"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/article_description" />

        <TextView
            android:id="@+id/article_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_spacing"
            android:layout_marginLeft="@dimen/medium_spacing"
            android:layout_marginRight="@dimen/medium_spacing"
            android:text="@string/article_description" />

        <TextView
            android:id="@+id/article_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="15"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_spacing"
            android:text="@string/article_availability"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryText" />

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/medium_spacing">
            <Button
                android:id="@+id/decrement_quantity"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:text="-"
                android:background="@color/colorPrimaryLight"/>

            <EditText
                android:id="@+id/article_quantity_adjust"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:inputType="number"
                android:text="1"
                android:textAlignment="center" />
            <Button
                android:id="@+id/increment_quantity"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:text="+"
                android:background="@color/colorPrimaryLight"/>
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>

</ScrollView>